--- a/curations/maven/mavencentral/jakarta.servlet/jakarta.servlet-api.yaml
+++ b/curations/maven/mavencentral/jakarta.servlet/jakarta.servlet-api.yaml
@@ -18,4 +18,4 @@ revisions:
       declared: EPL-2.0 OR GPL-2.0-only WITH Classpath-exception-2.0
   6.0.0:
     licensed:
-      declared: EPL-2.0
+      declared: EPL-2.0 OR GPL-2.0-only WITH Classpath-exception-2.0
