--- a/curations/maven/mavencentral/org.jboss.openjdk-orb/openjdk-orb.yaml
+++ b/curations/maven/mavencentral/org.jboss.openjdk-orb/openjdk-orb.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   8.1.4.Final:
     licensed:
-      declared: GPL-2.0-only
+      declared: GPL-2.0-only WITH Classpath-exception-2.0
