--- a/curations/gem/rubygems/-/power_assert.yaml
+++ b/curations/gem/rubygems/-/power_assert.yaml
@@ -8,7 +8,7 @@ revisions:
       declared: Ruby OR BSD-2-Clause
   1.0.2:
     licensed:
-      declared: BSD-2-Clause
+      declared: Ruby OR BSD-2-Clause
   1.1.3:
     licensed:
       declared: Ruby OR BSD-2-Clause
