--- a/curations/pypi/pypi/-/typing-extensions.yaml
+++ b/curations/pypi/pypi/-/typing-extensions.yaml
@@ -64,7 +64,7 @@ revisions:
       declared: Python-2.0.1
   4.7.0:
     licensed:
-      declared: PSF-2.0
+      declared: Python-2.0.1
   4.7.1:
     licensed:
       declared: Python-2.0.1
