--- a/curations/pod/cocoapods/-/SocketRocket.yaml
+++ b/curations/pod/cocoapods/-/SocketRocket.yaml
@@ -8,4 +8,4 @@ revisions:
       declared: BSD-3-Clause AND OTHER
   0.7.0:
     licensed:
-      declared: BSD-3-Clause
+      declared: BSD-3-Clause AND OTHER
