--- a/curations/npm/npmjs/@progress/kendo-react-layout.yaml
+++ b/curations/npm/npmjs/@progress/kendo-react-layout.yaml
@@ -30,7 +30,7 @@ revisions:
       declared: OTHER
   5.16.1:
     licensed:
-      declared: CDDL-1.0
+      declared: OTHER
   5.3.0:
     licensed:
       declared: OTHER
