--- a/curations/npm/npmjs/@progress/kendo-react-notification.yaml
+++ b/curations/npm/npmjs/@progress/kendo-react-notification.yaml
@@ -12,7 +12,7 @@ revisions:
       declared: OTHER
   5.16.1:
     licensed:
-      declared: CDDL-1.0
+      declared: OTHER
   5.6.0:
     licensed:
       declared: OTHER
