--- a/curations/npm/npmjs/@progress/kendo-react-treeview.yaml
+++ b/curations/npm/npmjs/@progress/kendo-react-treeview.yaml
@@ -27,7 +27,7 @@ revisions:
       declared: OTHER
   5.16.1:
     licensed:
-      declared: CDDL-1.0
+      declared: OTHER
   5.3.0:
     licensed:
       declared: OTHER
