--- a/curations/sourcearchive/mavencentral/org.locationtech.jts/jts-core.yaml
+++ b/curations/sourcearchive/mavencentral/org.locationtech.jts/jts-core.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   1.17.0:
     licensed:
-      declared: EPL-2.0 AND BSD-3-Clause
+      declared: EPL-2.0 OR BSD-3-Clause
