--- a/curations/pypi/pypi/-/pyqt5-sip.yaml
+++ b/curations/pypi/pypi/-/pyqt5-sip.yaml
@@ -5,4 +5,4 @@ coordinates:
 revisions:
   12.11.0:
     licensed:
-      declared: GPL-3.0-only
+      declared: GPL-2.0-only OR GPL-3.0-only OR OTHER
