--- a/curations/nuget/nuget/-/NUglify.yaml
+++ b/curations/nuget/nuget/-/NUglify.yaml
@@ -26,7 +26,7 @@ revisions:
       declared: BSD-2-Clause
   1.20.2:
     licensed:
-      declared: Apache-2.0
+      declared: BSD-2-Clause
   1.20.7:
     licensed:
       declared: BSD-2-Clause
