--- a/curations/maven/mavencentral/com.h2database/h2.yaml
+++ b/curations/maven/mavencentral/com.h2database/h2.yaml
@@ -53,4 +53,4 @@ revisions:
       declared: MPL-2.0 OR EPL-1.0
   2.2.220:
     licensed:
-      declared: MPL-2.0
+      declared: MPL-2.0 OR EPL-1.0
