--- a/curations/nuget/nuget/-/Xamarin.Kotlin.StdLib.Jdk7.yaml
+++ b/curations/nuget/nuget/-/Xamarin.Kotlin.StdLib.Jdk7.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   1.4.10:
     licensed:
-      declared: Apache-2.0
+      declared: MIT
   1.5.10:
     licensed:
       declared: MIT
