--- a/curations/nuget/nuget/-/Selenium.Chrome.WebDriver.yaml
+++ b/curations/nuget/nuget/-/Selenium.Chrome.WebDriver.yaml
@@ -26,7 +26,7 @@ revisions:
       declared: Unlicense
   2.43.0:
     licensed:
-      declared: NONE
+      declared: Unlicense
   2.45.0:
     licensed:
       declared: Unlicense
