--- a/curations/nuget/nuget/-/DotNetZip.yaml
+++ b/curations/nuget/nuget/-/DotNetZip.yaml
@@ -23,7 +23,7 @@ revisions:
       declared: MS-PL
   1.13.6:
     licensed:
-      declared: MIT
+      declared: MS-PL
   1.13.7:
     licensed:
       declared: MS-PL
