--- a/curations/maven/mavencentral/org.eclipse.persistence/eclipselink.yaml
+++ b/curations/maven/mavencentral/org.eclipse.persistence/eclipselink.yaml
@@ -21,4 +21,4 @@ revisions:
       declared: EPL-2.0 OR BSD-3-Clause
   4.0.1:
     licensed:
-      declared: EPL-2.0
+      declared: EPL-2.0 OR BSD-3-Clause
