--- a/curations/nuget/nuget/-/DynamicTableEntityJsonSerializer.yaml
+++ b/curations/nuget/nuget/-/DynamicTableEntityJsonSerializer.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   1.0.0:
     licensed:
-      declared: MIT
+      declared: NONE
   1.1.0:
     licensed:
       declared: NONE
